js/js.translator/testData/incremental/invalidation/enum/lib1/l1.1.kt
enum class TestEnum {
    A, B
}
